--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/.history
+/.history/
 /.env
 /.env.test
 phpunit.xml.dist
@@ -21,3 +21,10 @@ phpunit.xml.dist
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
